--- a/Group_work/css/style.css
+++ b/Group_work/css/style.css
@@ -325,3 +325,270 @@ body, html {
     left: 950px;
     top: 433px;
 }
+.div_natural_products {
+    position: absolute;
+    width: 350px;
+    height: 115px;
+    left: 200px;
+    
+}
+.text_natural {
+    position: absolute;
+    width: 290px;
+    height: 34px;
+    left: 455px;
+    top: 760px;
+    
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    
+    color: #FFA5BA;
+    
+}
+.text_products {
+    position: absolute;
+    width: 350px;
+    height: 66px;
+    left: 430px;
+    top: 800px;
+    
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 58px;
+    line-height: 66px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    
+    color: #D41443;
+}
+.div_ice_cream {
+    position: absolute;
+    width: 335px;
+    height: 735px;
+    left: 120px;
+}
+.background_ice_cream {
+    position: absolute;
+    width: 329px;
+    height: 525px;
+    left: 117px;
+    top: 1166px;
+    background: #FFB8CA;
+    border-radius: 24px;
+}
+.img_ice_cream {
+    position: absolute;
+    width: 329px;
+    height: 329px;
+    left: 117px;
+    top: 950px;
+
+}
+.text_ice_cream {
+    position: absolute;
+    width: 180px;
+    height: 34px;
+    left: 194px;
+    top: 1300px;
+
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+}
+.ice_cream_three_points {
+    position: absolute;
+    width: 26px;
+    height: 6px;
+    left: 268px;
+    top: 1395px;
+
+}
+.text_Lorem_ipsum_dolor_sit {
+    position: absolute;
+    width: 241px;
+    height: 106px;
+    left: 161px;
+    top: 1433px;
+
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 176%;
+    /* or 28px */
+
+    text-align: center;
+    letter-spacing: 0.04em;
+
+    color: #FFFFFF;
+}
+.arrow_ice_cream {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 261px;
+    top: 1601px;
+}
+.div_ice_coffee {
+    position: absolute;
+    width: 337px;
+    height: 735px;
+    left: 120px;
+}
+.background_ice_coffee {
+    position: absolute;
+    width: 330px;
+    height: 525px;
+    left: 475px;
+    top: 1166px;
+
+    background: #F0D1A5;
+    border-radius: 24px;
+}
+.img_ice_coffee {
+    position: absolute;
+    width: 337px;
+    height: 335px;
+    left: 473px;
+    top: 956px;
+}
+.text_ice_coffee {
+    position: absolute;
+    width: 190px;
+    height: 34px;
+    left: 549px;
+    top: 1300px;
+    
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    
+    color: #FFFFFF;
+}
+.ice_coffee_three_points {
+    position: absolute;
+    width: 26px;
+    height: 6px;
+    left: 627px;
+    top: 1395px;    
+}
+.arrow_ice_coffee {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 620px;
+    top: 1601px;
+}
+.div_milkshakes {
+    position: absolute;
+    width: 335px;
+    height: 735px;
+    left: 120px;
+}
+.background_milkshakes {
+    position: absolute;
+    width: 329px;
+    height: 525px;
+    left: 835px;
+    top: 1166px;
+    
+    background: #C2E297;
+    border-radius: 24px;
+}
+.img_milkshakes {
+    position: absolute;
+    width: 335px;
+    height: 335px;
+    left: 833px;
+    top: 956px;
+}
+.text_milkshakes {
+    position: absolute;
+    width: 209px;
+    height: 34px;
+    left: 895px;
+    top: 1300px;
+    
+    font-family: 'Titan One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 34px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    
+    color: #FFFFFF;
+}
+.milkshakes_three_points {
+    position: absolute;
+    width: 26px;
+    height: 6px;
+    left: 986px;
+    top: 1395px;
+}
+.arrow_milkshakes {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 979px;
+    top: 1601px;
+}
+.ice_coffee_text_Lorem_ipsum_dolor_sit {
+    position: absolute;
+    width: 241px;
+    height: 106px;
+    left: 519px;
+    top: 1433px;
+    
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 176%;
+    /* or 28px */
+    
+    text-align: center;
+    letter-spacing: 0.04em;
+    
+    color: #FFFFFF;
+}
+.milkshakes_text_Lorem_ipsum_dolor_sit {
+    position: absolute;
+    width: 241px;
+    height: 106px;
+    left: 879px;
+    top: 1433px;
+    
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 176%;
+    /* or 28px */
+    
+    text-align: center;
+    letter-spacing: 0.04em;
+    
+    color: #FFFFFF;
+}
